fixing local env

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 										</div>
 									</div> -->
 									<div class="perspective-500">
-										<h2 class="custom-hero-font-1 appear-animation" data-appear-animation="textEntrance" data-appear-animation-delay="0">Driving <strong class="custom-decoration-1 d-inline-block"><mark class="bg-transparent d-inline-block p-0 mark mark-color mark-color-tertiary">Prosperity</mark></strong><br><mark class="bg-transparent d-inline-block p-0 mark mark-color mark-color-tertiary">Through</mark> <strong>Innovation</strong></h2>										
+										<h2 class="custom-hero-font-1 appear-animation" data-appear-animation="textEntrance" data-appear-animation-delay="0">Pel Driving <strong class="custom-decoration-1 d-inline-block"><mark class="bg-transparent d-inline-block p-0 mark mark-color mark-color-tertiary">Prosperity</mark></strong><br><mark class="bg-transparent d-inline-block p-0 mark mark-color mark-color-tertiary">Through</mark> <strong>Innovation</strong></h2>										
 									</div>
 									<div class="d-flex mb-4 justify-content-center justify-content-lg-start">
 										<div class="feature-box align-items-center me-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="0">
