fixing local env

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 													<li class="dropdown dropdown-full-color dropdown-dark">
 														<a href="#" class="dropdown-item dropdown-toggle text-hover-primary">About Us</a>
 														<ul class="dropdown-menu">
-															<li><a href="/about-us" style="color:#fff" class="nav-link">Who We Are</a></li>
-															<li><a href="/our-founder" style="color:#fff" class="nav-link">Our Founder</a></li>
-															<li><a href="/leadership" style="color:#fff" class="nav-link">Leadership Team</a></li>
+															<li><a href="/about-us" style="color:#BCE318" class="nav-link">Who We Are</a></li>
+															<li><a href="/our-founder" style="color:#BCE318" class="nav-link">Our Founder</a></li>
+															<li><a href="/leadership" style="color:#BCE318" class="nav-link">Leadership Team</a></li>
 														</ul>
 													</li>
 													<li>
