fixing local env

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<title>Sirius Inc. | Home</title>	
 
 		<meta name="keywords" content="Sustainable Investments, Africa Business, Fin-Tech, Renewable Energy, Real Estate, Agribusiness, Mineral Exploration" />
-		<meta name="description" content="Sirius Inc. - Redefining Africa's business landscape through sustainable, innovative investments in fin-tech, renewable energy, real estate, agribusiness, and more.">
-		<meta name="author" content="Sirius Inc.">
+		<meta name="description" content="Ken-Sirius - Redefining Africa's business landscape through sustainable, innovative investments in fin-tech, renewable energy, real estate, agribusiness, and more.">
+		<meta name="author" content="Ken-Sirius Inc">
 
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
