--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 										<div class="card-body text-center">
 											<h4 class="text-4 font-weight-semibold mb-1">Panda O.</h4>
 											<p class="text-3 text-dark mb-2">Product Manager</p>
-											<p class="text-3 text-muted mb-0">Panda facilitates strategic project management, fostering sustainable investments for Africa's future.</p>
+											<p class="text-3 text-muted mb-0">Panda facilitates strategic project management.</p>
 										</div>
 									</div>
 								</div>
@@ -769,7 +769,7 @@
 										<div class="card-body text-center">
 											<h4 class="text-4 font-weight-semibold mb-1">Fasanya P.</h4>
 											<p class="text-3 text-dark mb-2">Software Developer</p>
-											<p class="text-3 text-muted mb-0">Fasanya oversees software operations, ensuring efficiency and excellence in our diverse portfolio.</p>
+											<p class="text-3 text-muted mb-0">Fasanya oversees software operations.</p>
 										</div>
 									</div>
 								</div>
