--- a/index.html
+++ b/index.html
@@ -786,7 +786,9 @@
 								</div>
 							</div>
 							<div class="text-center mt-4">
-								<a href="/our-team" class="btn btn-outline-primary btn-modern btn-rounded text-3 font-weight-semibold">Meet Our Full Team <i class="fas fa-arrow-right ms-2"></i></a>
+								<a href="/our-team"
+								class="btn btn-modern btn-effect-4 btn-rounded btn-dark text-transform-none text-3 font-weight-medium mt-2 mb-2 z-index-2 p-relative">
+								Meet Our Team <i class="fas fa-arrow-right rotate-l-45 ms-2"></i></a>
 							</div>
 						</div>
 					</div>
