--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Sirius Inc. | Home</title>
+	<title>Ken Sirius. | Home</title>
 
 	<meta name="keywords"
 		content="Sustainable Investments, Africa Business, Fin-Tech, Renewable Energy, Real Estate, Agribusiness, Mineral Exploration" />
@@ -14,8 +14,8 @@
 		content="Ken-Sirius - Redefining Africa's business landscape through sustainable, innovative investments in fin-tech, renewable energy, real estate, agribusiness, and more.">
 	<meta name="author" content="Ken-Sirius Inc">
 
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+	<link rel="shortcut icon" href="img/fav.png" type="image/x-icon" />
+	<link rel="apple-touch-icon" href="img/fav.png">
 
 	<!-- Mobile Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
@@ -26,7 +26,7 @@
 		rel="stylesheet" type="text/css">
 
 	<!-- Vendor CSS -->
-	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="vendor/bootstrap/css/nbootstrap.min.css">
 	<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">
 	<link rel="stylesheet" href="vendor/animate/animate.compat.css">
 	<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
@@ -35,18 +35,15 @@
 	<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
 
 	<!-- Theme CSS -->
-	<link rel="stylesheet" href="css/theme.css">
-	<link rel="stylesheet" href="css/theme-elements.css">
-
+	<link rel="stylesheet" href="css/ntheme.css">
+	<link rel="stylesheet" href="css/ntheme-elements.css">
 	<!-- Demo CSS -->
 	<link rel="stylesheet" href="css/demos/demo-marketing-1.css">
 
 	<!-- Skin CSS -->
 	<link id="skinCSS" rel="stylesheet" href="css/skins/skin-marketing-1.css">
-
 	<!-- Theme Custom CSS -->
 	<link rel="stylesheet" href="css/custom.css">
-
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-T21B0FFW8M"></script>
 	<script>
@@ -82,7 +79,7 @@
 												<li>
 													<a class="nav-link active" href="/">Home</a>
 												</li>
-												<li class="dropdown dropdown-full-color dropdown-dark">
+												 <li class="dropdown dropdown-full-color dropdown-dark">
 													<a href="#"
 														class="dropdown-item dropdown-toggle text-hover-primary">About
 														Us</a>
@@ -91,15 +88,18 @@
 																class="nav-link">Who We Are</a></li>
 														<li><a href="/our-founder" style="color:#BCE318"
 																class="nav-link">Our Founder</a></li>
-														<li><a href="/leadership" style="color:#BCE318"
-																class="nav-link">Leadership Team</a></li>
+														<!-- <li><a href="/leadership" style="color:#BCE318"
+																class="nav-link">Leadership Team</a></li> -->
 													</ul>
-												</li>
+												</li> 
+												<!-- <li>
+													<a class="nav-link" href="#">About Us</a>
+												</li> -->
 												<li>
 													<a class="nav-link" href="/services">Our Services</a>
 												</li>
 												<li>
-													<a class="nav-link nav-link-custom-1" href="/contact-us"><span>Let's
+													<a class="nav-link nav-link-custom-1" href="#footer"><span>Let's
 															Connect!</span></a>
 												</li>
 											</ul>
@@ -124,12 +124,12 @@
                     <div class="row py-lg-5 text-center text-lg-start">
                         <div class="col-lg-8 order-2 order-lg-1 align-self-center p-static">
                             <div data-plugin-float-element data-plugin-options="{'minWindowWidth': 992, 'startPos': 'bottom', 'speed': 0.4, 'transition': true, 'transitionDuration': 1000}">
-                                <h1 class="text-color-dark font-weight-semi-bold text-lg-12 appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0"><mark class="bg-transparent d-inline-block p-0 mark mark-color mark-color-tertiary">Who We Are</mark></h1>
+                                <h1   class="text-color-dark font-weight-semi-bold text-lg-12 appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0"><mark style="color: #052f2A !important" class="bg-transparent d-inline-block p-0 mark mark-color mark-color-tertiary">Who We Are</mark></h1>
                             </div>
                         </div>
                         <div class="col-lg-4 order-1 order-lg-2 align-self-center">
                             <ul class="breadcrumb d-flex justify-content-center justify-content-lg-end text-4-5">
-                                <li><a href="demo-auto-services.html" class="text-color-dark text-color-hover-primary text-transform-none text-decoration-none">Home</a></li>
+                                <li><a href="/" class="text-color-dark text-color-hover-primary text-transform-none text-decoration-none">Home</a></li>
                                 <li class="active text-color-primary text-transform-none">About</li>
                             </ul>
                         </div>
@@ -153,7 +153,7 @@
                                     <a href="#">
                                         <span class="bg-gradient text-light anim-hover-scale-1-2 transition-3ms d-inline-flex align-items-center text-3-5 rounded-pill px-4 py-1 font-weight-500 me-2 mb-4">
                                             <span><img src="img/hero/fin-tech.jpg" alt="" class="rounded-pill img-fluid my-2 p-relative right-7 me-2"></span>
-                                            <span class="rounded-circle bg-light d-inline-block"><img width="68" class="scale-1" src="img/demos/marketing-1/svg/generic-2.svg" alt="" /></span>
+                                            <!-- <span class="rounded-circle bg-light d-inline-block"><img width="68" class="scale-1" src="img/demos/marketing-1/svg/generic-2.svg" alt="" /></span> -->
                                         </span>
                                     </a>
                                 </div>
@@ -275,11 +275,11 @@
 								<div class="col-lg-7">
 									<div class="px-5 px-lg-0 pe-lg-5 appear-animation" data-appear-animation="fadeIn"
 										data-appear-animation-delay="0">
-										<h3 class="custom-font-1 font-weight-semibold">Let’s build <span
+										<h3 class="custom-font-1 font-weight-semibold mt-4">Let’s build <span
 												class="custom-decoration-2 d-inline-block">Africa’s</span> future
 											together!</h3>
 									</div>
-									<a href="/contact-us"
+									<a href="https://wa.me/+2348161576438"
 										class="btn btn-modern btn-effect-4 btn-rounded btn-light text-dark text-hover-primary text-transform-none text-4 font-weight-medium mt-2 mb-2">Let's
 										Connect! <i class="fas fa-arrow-right rotate-l-45 ms-2"></i></a>
 									<div class="row mt-5">
@@ -290,11 +290,11 @@
 												</li>
 												<li><a href="/our-founder" class="text-color-hover-primary">Our
 														Founder</a></li>
-												<li><a href="/leadership" class="text-color-hover-primary">Leadership
-														Team</a></li>
+												<!-- <li><a href="/leadership" class="text-color-hover-primary">Leadership
+														Team</a></li> -->
 												<li><a href="/services" class="text-color-hover-primary">Our
 														Services</a></li>
-												<li><a href="/contact-us" class="text-color-hover-primary">Let's
+												<li><a href="https://wa.me/+2348161576438" class="text-color-hover-primary">Let's
 														Connect!</a></li>
 											</ul>
 										</div>
@@ -308,8 +308,8 @@
 												</li>
 												<li
 													class="d-flex justify-content-center justify-content-lg-start align-items-center mb-4">
-													<a href="tel:+234123456789"
-														class="d-inline-flex align-items-center text-decoration-none text-light text-color-hover-primary font-weight-semibold text-6">+234-123-456-789</a>
+													<a href="tel:+2348161576438"
+														class="d-inline-flex align-items-center text-decoration-none text-light text-color-hover-primary font-weight-semibold text-6">+234-816-1576-438</a>
 												</li>
 											</ul>
 										</div>
